🔎 skeleton mDNS discovery implemented
Signed-off-by: Patrik Gfeller <patrik.gfeller@gmail.com>
Signed-off-by: Patrik Gfeller <patrik.gfeller@proton.me>